Fixing some input bug, and change algorit genetic metodh

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:text="Optimasi Rute Wisata Kota Batu"
+        android:text="Optimasi Rute Wisata Kota SEMARANG"
         android:textAlignment="center"
         android:textSize="24sp"
         android:textStyle="bold"
@@ -25,7 +25,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="Aplikasi ini membantu Anda menemukan rute wisata terbaik di Kota Batu menggunakan algoritma Evolution Strategies, dengan mempertimbangkan waktu tempuh dan jam operasional setiap tempat wisata."
+        android:text="Aplikasi ini membantu Anda menemukan rute wisata terbaik di Kota Semarang menggunakan algoritma Genetika, dengan mempertimbangkan waktu tempuh dan jam operasional setiap tempat wisata."
         android:textAlignment="center"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
