--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -8,12 +8,12 @@
 
     <item
         android:id="@+id/navigation_input"
-        android:icon="@drawable/ic_dashboard_black_24dp"
+        android:icon="@drawable/ic_input"
         android:title="Input" />
 
     <item
         android:id="@+id/navigation_result"
-        android:icon="@drawable/ic_notifications_black_24dp"
+        android:icon="@drawable/ic_info"
         android:title="Result" />
 
 </menu>
