--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:text="Optimasi Rute Wisata Kota SEMARANG"
+        android:text="Optimasi Rute Wisata Kota SEMARANG Kelompok 9"
         android:textAlignment="center"
         android:textSize="24sp"
         android:textStyle="bold"
