--- a/app/src/main/res/layout/item_itinerary.xml
+++ b/app/src/main/res/layout/item_itinerary.xml
@@ -15,6 +15,14 @@
         tools:text="Coban Rondo" />
 
     <TextView
+        android:id="@+id/tv_place_price"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="?attr/colorPrimary"
+        android:textStyle="bold"
+        tools:text="Harga Tiket: Rp 35.000" />
+
+    <TextView
         android:id="@+id/tv_schedule"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
