--- a/app/src/main/res/layout/item_wisata_input.xml
+++ b/app/src/main/res/layout/item_wisata_input.xml
@@ -38,6 +38,17 @@
         app:layout_constraintTop_toBottomOf="@+id/tv_jam_operasional"
         tools:text="Durasi Kunjungan: 3 jam" />
 
+    <TextView
+        android:id="@+id/tv_harga"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:textColor="?attr/colorPrimary"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="@+id/tv_durasi"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_durasi"
+        tools:text="Harga: Rp 20.000" />
+
     <CheckBox
         android:id="@+id/checkbox_pilih"
         android:layout_width="wrap_content"
