--- a/app/src/main/res/layout/fragment_input.xml
+++ b/app/src/main/res/layout/fragment_input.xml
@@ -245,7 +245,7 @@
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_marginTop="16dp"
-            android:background="#E0E0E0"/>
+            android:background="?android:attr/colorBackground"/>
 
     </LinearLayout> <!-- END OF EXPANDABLE CONTENT -->
 
@@ -257,7 +257,7 @@
         android:paddingHorizontal="16dp"
         android:paddingTop="12dp"
         android:paddingBottom="8dp"
-        android:background="@android:color/white"
+        android:background="?android:attr/colorBackground"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/layout_expandable_content">
